re PR target/16195 ([3.4 only] Miscompilation of GCC 3.3.x by 3.4.x)

PR target/16195
	* config/rs6000/rs6000.c (rs6000_conditional_register_usage): Make
	r30 fixed if TARGET_TOC && TARGET_MINIMAL_TOC.
	(first_reg_to_save): Pretend call_used_regs[30] is 0 if
	TARGET_TOC && TARGET_MINIMAL_TOC.
	(rs6000_emit_prologue, rs6000_emit_epilogue): Likewise.

	* gcc.dg/20040625-1.c: New test.

From-SVN: r83872